[package]
name = "halo2-lib-bn254-precompiles"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# halo2 - PSE fork
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", tag = "v2023_02_02" }

# halo2-lib - Axiom's helper API
halo2-base = { git = "https://github.com/axiom-crypto/halo2-lib", branch = "community-edition" }
halo2-ecc = { git = "https://github.com/axiom-crypto/halo2-lib", branch = "community-edition" }
serde = "1.0.163"
clap = "4.3.2"
ff = "0.13.0"
itertools = "0.10.5"
ark-std = "0.4.0"
rand_core = "0.6.4"
serde_json = "1.0.96"
group = "0.13.0"
